# CWG-Coding_with_Git

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: security.yml  tests.yml
core/: __init__.py  cli.py  gpScraper.py  interpreter.py  runner.py
docs/: CONTRIBUTING.md  LANGUAGE.md  README.md
packaging/coding-with-git/: README.md  pyproject.toml
scraper/: __init__.py  gpScraper.py  interpreter.py
src/cwg/: gpScraper.py
tests/: conftest.py  test_cli.py  test_gpScraper.py  test_interpreter.py  test_runner.py
