[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"



[project]
name = "cwg"
version = "0.1.0"
description = "CWG — a Git-based programming language interpreter"
readme = "docs/README.md"
license = "GPL-3.0-only"
license-files = ["docs/LICENSE"]
requires-python = ">=3.10"
dependencies = ["gitpython>=3,<4"]

[project.optional-dependencies]
dev = ["pytest"]



[tool.setuptools.packages.find]
where = ["src"]
include = ["cwg*"]

[tool.coverage.run]
source = ["cwg"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "except ImportError",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]



[project.scripts]
cwg = "cwg.cli:main"
