[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"



[project]
name = "cwg"
version = "0.2.0"
description = "CWG — a Git-based programming language interpreter"
readme = "docs/README.md"
license = "GPL-3.0-only"
license-files = ["docs/LICENSE"]
requires-python = ">=3.10"
dependencies = ["gitpython>=3,<4"]
authors = [
    { name = "JakeRecharte" },
    { name = "dominicvicente31" },
]
keywords = ["git", "interpreter", "esolang", "esoteric-language", "programming-language", "version-control"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Interpreters",
    "Topic :: Software Development :: Version Control :: Git",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/JakeRecharte/CWG-Coding_with_Git"
Repository = "https://github.com/JakeRecharte/CWG-Coding_with_Git"
Issues = "https://github.com/JakeRecharte/CWG-Coding_with_Git/issues"



[tool.setuptools.packages.find]
where = ["src"]
include = ["cwg*"]

[tool.coverage.run]
source = ["cwg"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "except ImportError",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]



[project.scripts]
cwg = "cwg.cli:main"
